# ising-spin

./: .gitignore  GFST_ISING_V14_DESIGN.md  README.md  RESEARCH_HIERARCHICAL_TYPED_ISING.md  RESEARCH_MCMC_REPETITION_SOLUTIONS.md  V18_IMPLEMENTATION_PLAN.md  V18_TEST_STRATEGY.md  cache_200k.py  conftest.py  eval.py  eval_30k.py  generate.py  generate_400_v10.py  pyproject.toml  requirements.txt  run.py  run_v10_20k.py  run_v10_50k.py  run_v10_final.py  run_v10_pure_v9.py  run_v11_v2.py  run_v11_v5.py  run_v11_v8.py  run_v12_poc.py  run_v13_poc.py  run_v14_poc.py  run_v5_fast_poc.py  run_v5_generate.py  run_v5_poc.py  run_v6_poc.py  run_v7_poc.py  run_v8_poc.py  run_v90.py  sweep_output.txt  sweep_v15.py  test_v10_mini.py  test_v82.py  test_v82_quick.py  train.py  train_attractor.py  (+16 more)
.github/workflows/: test.yml
docs/knowledge_base/: 2012-cowan-self-organized-criticality-neurons.md  2020-halverson-neural-networks-quantum-field-theory.md  2021-daruwalla-information-bottleneck-hebbian.md  2021-erbin-nonperturbative-renormalization-nn-qft.md  2021-tiberi-gell-mann-low-criticality-neural-networks.md  2024-howard-bayesian-rg-flow-nnft.md  2024-howard-wilsonian-renormalization-nngp.md  2024-yeung-generalized-holographic-reduced.md  2025-agliari-hopfield-spectral-hebbian.md  2025-eugenio-hebbian-learning-local-structure-language.md  2025-kim-fno-effective-field-theory.md  2025-peraza-coppola-rg-deep-neural-networks.md  2025-rancon-dreaming-scale-invariance-rg.md  2025-sen-viability-perturbative-qft-neurons.md  2026-ferko-anomalies-neural-network-field-theory.md  README.md  (+3 more)
ising-spin/: .gitignore  README.md  train.py  train_v77.py  train_v78.py  training_results_v77.json
tests/: conftest.py  test_coupling.py  test_dense_am.py  test_integer_lm.py  test_integration.py  test_model.py  test_property.py  test_qfhrr.py  test_regression.py  test_reservoir.py  test_rff.py  test_v18_integration.py  test_v18_property.py  test_v18_regression.py
(+139 files in other folders)
