[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integer-lm"
version = "1.0.1"
description = "Pure Integer Language Model — no neural nets, no torch, runs on a Pi 5"
readme = "ising-spin/README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["ising-spin/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
